surefire modules rework